--- a/views/produits.html
+++ b/views/produits.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produits</title>
 </head>
+
 <body>
     <div class="container">
         <h1>Produits</h1>
@@ -27,5 +28,6 @@
             </button>
         </div>
     </div>
+    <script src="produit.js"></script>
 </body>
 </html>
