--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,12 @@
                 <li> <a href="#">contact</a> </li>
             </ul>
         </header>
+        <section class="entête">
+            
         <p>Orinoco Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, voluptatibus natus! Asperiores nulla, culpa facilis ex quos aperiam cupiditate, cumque quae tempora, maiores vitae. Non!
         </p>
-        <H1>Articles disponibles</H1>
+        <H2>Articles disponibles</H2>
+        </section>
             <section id="shop" >
             </section>
         <script src="index.js"></script>
