--- a/views/css/index.style.css
+++ b/views/css/index.style.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow: scroll;
+  overflow: auto;
 }
 
 body {
@@ -16,16 +16,18 @@ body {
 
 .container-fluid{
   /*background-color: rgb(177, 217, 223);*/
-  background-image: url("/images/images (5).jpg " );
+  background-image: url("/images/images.jpg" );
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+  /*background-position-x: -100px;*/
 
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: end;
+  flex-direction: column;
   position: relative;
   border-radius: 5px;
 }
@@ -50,23 +52,51 @@ header ul {
 }
 
 
-p{
-  text-align: center;
-}
 h1 {
   /*background-color: crimson;*/
+  color: black;
   margin: 0px auto 50px;
-  
 }
 
+h2{
+  color: whitesmoke;
+  width: 225px;
+  margin: 0 auto;
+  padding: 5px;
 
+}
+
+.entête{
+  background-color: rgb(66, 54, 36);
+  width: 100%;
+  opacity: 0.8;
+  margin: 0 auto;
+  text-align: center;
+  position: absolute;
+  top: 85px;
+}
+
+entête p{
+  text-align: center;
+  position: absolute;
+  top: 95px;
+  color: whitesmoke;
+}
 #shop{
-  background-color: rgb(0, 119, 128);
-  width: 90%;
-  height: 50%;
+  /*background-color: rgb(19, 36, 37);*/
+  /*background-color: rgb(121, 75, 56);*/
+  background-color: rgb(66, 54, 36);
+
+  width: 50%;
+  height: 70vh;
   border-radius: 5px;
   padding: 20px;
+  position: absolute;
+  top: 175px;
+  right:2%;
+  bottom: 5px;
   text-align: center;
+  
   
 }
 
@@ -76,6 +106,11 @@ h1 {
   width: 20%;
   height: 40%;
   border-radius: 5px;
+}
+
+.textuel{
+  text-decoration: none;
+  color: white;
 }
 
 
