--- a/views/css/index.style.css
+++ b/views/css/index.style.css
@@ -1,117 +1,174 @@
+@charset "UTF-8";
 * {
   margin: 0px;
   padding: 0px;
-  box-sizing: border-box;
-  overflow: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
-  background-color: #cdd1d0;
   width: 100vw;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container-fluid{
-  /*background-color: rgb(177, 217, 223);*/
-  background-image: url("/images/images.jpg" );
-  background-repeat: no-repeat;
-  background-size: cover;
-  /*background-position-x: -100px;*/
-
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: end;
-  flex-direction: column;
-  position: relative;
-  border-radius: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header {
   background-color: cornsilk;
   width: 100%;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-content: center;
   /*margin: 0px auto 180px;*/
   position: absolute;
   top: 0px;
   left: 0px;
-  border: 1px solid black;
+}
+
+header h1 {
+  /*background-color: crimson;*/
+  color: #7a4c18;
+  margin-left: 25px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 header ul {
-  /*background-color: darkcyan;*/
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-left: auto;
+  margin-right: 10px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
-
-h1 {
-  /*background-color: crimson;*/
-  color: black;
-  margin: 0px auto 50px;
+header ul li {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-h2{
-  color: whitesmoke;
-  width: 225px;
-  margin: 0 auto;
-  padding: 5px;
-
-}
-
-.entête{
-  background-color: rgb(66, 54, 36);
-  width: 100%;
-  opacity: 0.8;
-  margin: 0 auto;
-  text-align: center;
-  position: absolute;
-  top: 85px;
-}
-
-entête p{
-  text-align: center;
-  position: absolute;
-  top: 95px;
-  color: whitesmoke;
-}
-#shop{
-  /*background-color: rgb(19, 36, 37);*/
-  /*background-color: rgb(121, 75, 56);*/
-  background-color: rgb(66, 54, 36);
-
-  width: 50%;
-  height: 70vh;
-  border-radius: 5px;
-  padding: 20px;
-  position: absolute;
-  top: 175px;
-  right:2%;
-  bottom: 5px;
-  text-align: center;
-  
-  
-}
-
-.cadré{
-  background-color: pink;
-  padding: 5px;
-  width: 20%;
-  height: 40%;
-  border-radius: 5px;
-}
-
-.textuel{
+header ul li a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
+.container {
+  background-image: url(/images/images.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  /*display: flex;
+    flex-direction: column;
+    */
+}
 
+.entête {
+  background-color: #3d240c;
+  width: 98%;
+  min-height: 105px;
+  text-align: center;
+  opacity: 0.8;
+  border-radius: 15px;
+  margin: 55px auto 5px auto;
+  border: 1px solid #271e15;
+  -webkit-box-shadow: 0px 5px 5px  black;
+          box-shadow: 0px 5px 5px  black;
+}
+
+.entête p {
+  font-size: 17px;
+  color: whitesmoke;
+}
+
+.entête h2 {
+  font-size: 20px;
+  color: whitesmoke;
+  text-transform: uppercase;
+  padding: 15px;
+}
+
+.big-box {
+  width: 98%;
+  height: 78%;
+  margin: 0px auto 5px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+}
+
+.right-box {
+  background-color: transparent;
+  width: 100%;
+  height: 92%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.big-card {
+  background-color: #52402f;
+  width: 48%;
+  height: 100%;
+  padding: 80px;
+  border-radius: 5px;
+  border: 1px solid #271e15;
+  -webkit-box-shadow: 0px 0px 5px  black;
+          box-shadow: 0px 0px 5px  black;
+}
+
+/************
+class à injecter via le javascript
+
+*************/
+.card {
+  background-color: grey;
+  width: 50px;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: center;
+}
+
+.text-style {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
+.pic-style {
+  border-radius: 3px;
+}
+
+/***************
+fin des class a injecter via javascript
+****************/
 /*# sourceMappingURL=index.style.css.map */
