--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <link rel="stylesheet" href="./css/index.style.css">
 
     <title>Accueil Orinico</title>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <header>
             <h1>
                 Orinoco
@@ -23,13 +22,23 @@
             </ul>
         </header>
         <section class="entête">
-            
-        <p>Orinoco Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, voluptatibus natus! Asperiores nulla, culpa facilis ex quos aperiam cupiditate, cumque quae tempora, maiores vitae. Non!
-        </p>
-        <H2>Articles disponibles</H2>
+            <p>Orinoco Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto, voluptatibus natus! Asperiores nulla, culpa facilis ex quos aperiam cupiditate, cumque quae tempora, maiores vitae. Non!
+            </p>
+            <H2>Articles disponibles</H2>
         </section>
-            <section id="shop" >
-            </section>
+
+        <section class="big-box">
+            <div class="right-box"> 
+                <div id="shop" class="big-card" >
+                    <div id="teddy" class="small-card">
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+
         <script src="index.js"></script>
     </div>
 </body>
