--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -1,29 +1,110 @@
 @import './templatePage.scss';
 
 
-h1{
-   /*background-color: crimson;*/
-   margin: 0px auto 50px;
-}
 
-
-.choice{
-    /*background-color: darkkhaki;*/
+.container{
+    //background-color: cadetblue;
+    background-image: url(/images/images.jpg);
+    background-size: cover;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
+    height: 100%;
+    /*display: flex;
+    flex-direction: column;
+    */
 }
-.button{
-    background-color: rgb(222, 222, 224);
-    cursor: pointer;
-    border-radius: 5px;
-    margin:5px ;
-    text-decoration: none;
-    border: 0.5px solid black;
-} 
 
-.button h2{
-    color: black;
-    font-size: 17px;
+
+
+.entête{
+    background-color: rgb(61, 36, 12);
+    width: 98%;
+    min-height: 105px;
+    text-align: center;
+    opacity: 0.8;
+    border-radius: 15px;
+    margin: 55px auto 5px auto;
+    border: 1px solid rgb(39, 30, 21);
+    box-shadow: 0px 5px 5px  black;
+
 }
+
+.entête p{
+    font-size: 17px;
+    color: whitesmoke;
+}
+
+.entête h2{
+    font-size: 20px;
+    color: whitesmoke;
+    text-transform: uppercase;
+    padding: 15px;
+}
+
+.big-box{
+    //background-color: blueviolet;
+    width: 98%;
+    height: 78%;
+    margin: 0px auto 5px auto;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.right-box{
+    //background-color: black;
+    background-color: transparent;
+    width: 100%;
+    height: 92%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+
+
+.big-card{
+    background-color: rgb(82, 64, 47);
+    width: 48%;
+    height: 100%;
+    padding: 80px;
+    border-radius: 5px;
+    
+    border: 1px solid rgb(39, 30, 21);
+    box-shadow:  0px 0px 5px  black;
+}
+
+
+
+
+
+/************
+class à injecter via le javascript
+
+*************/
+
+.card{
+    background-color: grey;
+    width: 50px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+
+.text-style{
+    color: whitesmoke;
+    text-decoration: none;
+}
+
+
+.pic-style{
+    border-radius: 3px;
+    //padding-bottom: 5px;
+}
+
+
+/***************
+fin des class a injecter via javascript
+****************/
