--- a/views/css/templatePage.css
+++ b/views/css/templatePage.css
@@ -7,7 +7,6 @@
 }
 
 body {
-  background-color: #cdd1d0;
   width: 100vw;
   height: 100vh;
   display: -webkit-box;
@@ -21,48 +20,45 @@ body {
           align-items: center;
 }
 
-.container {
-  background-color: cadetblue;
-  width: 60%;
-  height: 90%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
-}
-
 header {
-  /*background-color: cornsilk;*/
+  background-color: cornsilk;
   width: 100%;
+  height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
   /*margin: 0px auto 180px;*/
   position: absolute;
   top: 0px;
   left: 0px;
 }
 
+header h1 {
+  /*background-color: crimson;*/
+  color: #7a4c18;
+  margin-left: 25px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
 header ul {
-  /*background-color: darkcyan;*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: auto;
+  margin-right: 10px;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+header ul li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+header ul li a {
+  text-decoration: none;
+  color: black;
 }
 /*# sourceMappingURL=templatePage.css.map */
