--- a/views/css/templatePage.scss
+++ b/views/css/templatePage.scss
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: rgb(205, 209, 208);
+    //background-color: rgb(205, 209, 208);
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -14,32 +14,45 @@ body{
     align-items: center;
 }
 
-.container{
-    background-color: cadetblue;
-    width: 60%;
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
 
 header{
-    /*background-color: cornsilk;*/
+    background-color: cornsilk;
     width: 100%;
+    height: 50px;
     display: flex;
-    justify-content: center;
-    align-content: center;
     /*margin: 0px auto 180px;*/
     position: absolute;
     top: 0px;
     left: 0px;
+
 }
 
+
+
+header h1{
+    /*background-color: crimson;*/
+    //margin: 0px auto 50px;
+    color: rgb(122, 76, 24);
+    margin-left: 25px;
+    align-self: center;
+ }
+ 
 
 header ul{
-    /*background-color: darkcyan;*/
+    li{
+        a{ 
+            text-decoration: none;
+            color: black;
+        }
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    //background-color: darkcyan;
     display: flex;
     margin-left: auto;
+    margin-right: 10px;
+    align-self: center;
+
+
 }
+
