--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,8 @@
             <div class="right-box"> 
                 <div id="shop" class="big-card" >
                     <div id="teddy" class="small-card">
-                        <p></p>
-                        <p></p>
+                        <p id="nomination"></p>
+                        <p id="price"></p>
                     </div>
                 </div>
             </div>
