--- a/views/css/index.style.css
+++ b/views/css/index.style.css
@@ -115,6 +115,7 @@ header ul li a {
   background-color: transparent;
   width: 100%;
   height: 92%;
+  padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -165,7 +166,10 @@ class à injecter via le javascript
 }
 
 .pic-style {
+  width: 50px;
+  height: 50px;
   border-radius: 3px;
+  margin: 0 auto;
 }
 
 /***************
