--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -55,6 +55,7 @@
     background-color: transparent;
     width: 100%;
     height: 92%;
+    padding: 5px;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -68,7 +69,6 @@
     height: 100%;
     padding: 80px;
     border-radius: 5px;
-    
     border: 1px solid rgb(39, 30, 21);
     box-shadow:  0px 0px 5px  black;
 }
@@ -100,7 +100,10 @@ class à injecter via le javascript
 
 
 .pic-style{
+    width: 50px;
+    height: 50px;
     border-radius: 3px;
+    margin: 0 auto;
     //padding-bottom: 5px;
 }
 
