--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
             <div class="right-box"> 
                 <div id="shop" class="big-card" >
                     <div id="teddy" class="small-card">
+                        <div id="img-card"></div>
                         <p id="nomination"></p>
                         <p id="price"></p>
                     </div>
