--- a/views/css/index.style.css
+++ b/views/css/index.style.css
@@ -132,11 +132,20 @@ header ul li a {
   background-color: #52402f;
   width: 48%;
   height: 100%;
-  padding: 80px;
+  padding-top: 10px;
   border-radius: 5px;
   border: 1px solid #271e15;
   -webkit-box-shadow: 0px 0px 5px  black;
           box-shadow: 0px 0px 5px  black;
+  overflow-y: auto;
+}
+
+#teddy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 /************
@@ -144,9 +153,9 @@ class à injecter via le javascript
 
 *************/
 .card {
-  background-color: grey;
-  width: 50px;
-  height: 80px;
+  background-color: cadetblue;
+  width: 180px;
+  height: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -154,22 +163,43 @@ class à injecter via le javascript
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   text-align: center;
+  border-radius: 0px 0px 5px 5px;
+  margin: 0px auto 10px auto;
 }
 
-.text-style {
+.card-img {
+  width: 100%;
+  height: 115px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.card-infos {
+  width: 100%;
+  height: 35px;
+}
+
+.info-name {
   color: whitesmoke;
   text-decoration: none;
+  height: 50%;
 }
 
-.pic-style {
-  width: 50px;
-  height: 50px;
-  border-radius: 3px;
-  margin: 0 auto;
+.info-price {
+  color: whitesmoke;
+  text-decoration: none;
+  height: 50%;
 }
 
 /***************
