--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -67,13 +67,19 @@
     background-color: rgb(82, 64, 47);
     width: 48%;
     height: 100%;
-    padding: 80px;
+    //padding: 10px;
+    padding-top: 10px;
     border-radius: 5px;
     border: 1px solid rgb(39, 30, 21);
     box-shadow:  0px 0px 5px  black;
+    overflow-y: auto;
 }
 
 
+#teddy{
+    display: flex;
+    flex-wrap: wrap;
+}
 
 
 
@@ -83,28 +89,46 @@ class à injecter via le javascript
 *************/
 
 .card{
-    background-color: grey;
-    width: 50px;
-    height: 80px;
+    //background-color: grey;
+    background-color: cadetblue;
+    //box-shadow: inset;
+    width: 180px;
+    height: 150px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     text-align: center;
+    border-radius: 0px 0px 5px 5px;
+    margin: 0px auto 10px auto;
 }
 
 
-.text-style{
+.card-img{
+    width: 100%;
+    height: 115px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.card-infos{
+    //background-color: darkgreen;
+    width: 100%;
+    height: 35px;
+}
+
+.info-name{
+    //background-color: crimson;
     color: whitesmoke;
     text-decoration: none;
+    height: 50%;
 }
 
-
-.pic-style{
-    width: 50px;
-    height: 50px;
-    border-radius: 3px;
-    margin: 0 auto;
-    //padding-bottom: 5px;
+.info-price{
+    //background-color: rgb(20, 220, 53);
+    color: whitesmoke;
+    text-decoration: none;
+    height: 50%;
 }
 
 
