--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -8,11 +8,7 @@
     background-size: cover;
     width: 100%;
     height: 100%;
-    /*display: flex;
-    flex-direction: column;
-    */
 }
-
 
 
 .entête{
@@ -25,7 +21,6 @@
     margin: 55px auto 5px auto;
     border: 1px solid rgb(39, 30, 21);
     box-shadow: 0px 5px 5px  black;
-
 }
 
 .entête p{
@@ -62,12 +57,10 @@
 }
 
 
-
 .big-card{
     background-color: rgb(82, 64, 47);
     width: 48%;
     height: 100%;
-    //padding: 10px;
     padding-top: 10px;
     border-radius: 5px;
     border: 1px solid rgb(39, 30, 21);
@@ -75,10 +68,10 @@
     overflow-y: auto;
 }
 
-
 #teddy{
     display: flex;
     flex-wrap: wrap;
+    cursor: pointer;
 }
 
 
