--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -6,6 +6,7 @@
     //background-color: cadetblue;
     background-image: url(/images/images.jpg);
     background-size: cover;
+    background-position-x: -80px;
     width: 100%;
     height: 100%;
 }
@@ -38,40 +39,59 @@
 .big-box{
     //background-color: blueviolet;
     width: 98%;
-    height: 78%;
-    margin: 0px auto 5px auto;
+    //height: 78%;
+    //height: 100%;
+    height: 70%;
+    padding: 5px;
+
+    margin: 0px auto 0px auto;
     display: flex;
     align-items: center;
-    justify-items: center;
+
+    justify-content: center;
 }
 
 .right-box{
     //background-color: black;
-    background-color: transparent;
     width: 100%;
+    //height: 92%;
     height: 92%;
-    padding: 5px;
+    
+    //padding: 15px 5px auto 5px ;
+    
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+
+    
+    overflow-y: auto;
 }
 
 
 .big-card{
     background-color: rgb(82, 64, 47);
-    width: 48%;
+    //width: 48%;
+    width: 40%;
+
     height: 100%;
-    padding-top: 10px;
+    //padding-top: 10px;
+    padding: 15px;
+    
     border-radius: 5px;
     border: 1px solid rgb(39, 30, 21);
     box-shadow:  0px 0px 5px  black;
     overflow-y: auto;
 }
 
-#teddy{
+.box-card{
+    //background-color: green;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
+
+    overflow-y: auto;
 }
 
 
@@ -85,29 +105,33 @@ class à injecter via le javascript
     //background-color: grey;
     background-color: cadetblue;
     //box-shadow: inset;
-    width: 180px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     text-align: center;
     border-radius: 0px 0px 5px 5px;
     margin: 0px auto 10px auto;
+    
+    
 }
 
 
 .card-img{
-    width: 100%;
-    height: 115px;
+    width: 80%;
+    //height: 80px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin: 0 auto;
 }
 
 .card-infos{
-    //background-color: darkgreen;
-    width: 100%;
+    background-color: darkgreen;
+    width: 80%;
     height: 35px;
+    margin: 0 auto;
 }
 
 .info-name{
