--- a/views/index.html
+++ b/views/index.html
@@ -30,12 +30,12 @@
         <section class="big-box">
             <div class="right-box"> 
                 <div id="shop" class="big-card" >
-                    <div id="teddy" class="small-card" >
+                    <div id="teddy" class="box-card" >
                     </div>
                 </div>
             </div>
         </section>
-        
+
         <script src="index.js"></script>
     </div>
 </body>
