add href product to cards's links

--- a/views/produit.html
+++ b/views/produit.html
@@ -14,24 +14,11 @@
 <body>
     <div class="container">
         <h1>Produits</h1>
-        <div class="recup-product">
-            <table>
-                <tr>
-                    <td>
-                        <h3>prix:</h3>
-                    </td>
-                    <td>
-                        <h3></h3>
-                    </td>
-                </tr>
-            </table>
-            <button type="btn">
-                <a type="btn" href="panier.html" class="button" onclick="fill-cart">
-                    <h2>Commander</h2>
-                </a>
-            </button>
-        </div>
+            <div id="card-teddy">
+           
+            </div>
     </div>
+
     <script src="produit.js"></script>
 </body>
 </html>
