--- a/views/css/produit.style.css
+++ b/views/css/produit.style.css
@@ -8,5 +8,38 @@
 
 body {
   background-color: #43439c;
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  background-color: crimson;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#card-teddy {
+  background-color: coral;
+  width: 200px;
+  height: 500px;
+}
+
+.card {
+  background-color: darkcyan;
+  width: 50px;
+  height: 50px;
 }
 /*# sourceMappingURL=produit.style.css.map */
