--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -5,6 +5,48 @@
     overflow: hidden;
 }
 
-body{
-    background-color: rgb(67, 67, 156);
-}
+
+
+
+body {
+    background-color: #43439c;
+    width: 100vw;
+    height: 100vh;
+  }
+  
+  
+  .container{
+    background-color: crimson;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+  }
+  
+  
+  #card-teddy{
+    background-color: coral;
+    width: 200px;
+    height: 500px;
+  }
+  
+  
+  
+  
+  
+  //*********
+  //class à injecter depuis javascript
+  //*********
+  
+  
+  .card{
+    background-color: darkcyan;
+    width: 50px;
+    height: 50px;
+  }
+  
+  
+  
