--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -1,3 +1,5 @@
+@import './templatePage.scss';
+
 *{
     margin: 0px;
     padding: 0px;
@@ -9,31 +11,37 @@
 
 
 body {
-    background-color: #43439c;
+    background-color: #9c7543;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   
   .container{
-    background-color: crimson;
+    //background-color: crimson;
     width: 100%;
-    height: 100%;
+    height: 80%;
+    //height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
   }
   
   
   #card-teddy{
-    background-color: coral;
-    width: 200px;
-    height: 500px;
+    //background-color: coral;
+    width:100%;
+    //height: 85%;
+    height: 100%;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
-  
   
   
   
@@ -43,10 +51,70 @@ body {
   
   
   .card{
-    background-color: darkcyan;
-    width: 50px;
-    height: 50px;
+    //background-color: darkcyan;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
+
+  .card-img{
+      //background-color: green;
+      width: 95%;
+      height: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      object-fit: contain;
+  }
+
   
+  img{
+      border-radius: 50px;
+      border: 3px solid rgb(83, 45, 27);
+  }
+
   
-  
+  .card-infos{
+    //background-color: hotpink;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .info-name{
+    background-color: indigo;
+    width: 50%;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+
+
+  .info-price{
+    background-color: indigo;
+    width: 50%;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+
+
+  .customization{
+    background-color: indigo;
+    width: 50%;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
