--- a/views/produit.html
+++ b/views/produit.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+    <header>
+        <h1>
+            Orinoco
+        </h1>
+        <ul>
+            <li> <a href="#">acceuil</a> </li>
+            <li> <a href="#">contact</a> </li>
+        </ul>
+    </header>
     <div class="container">
         <h1>Produits</h1>
             <div id="card-teddy">
