--- a/views/css/index.style.css
+++ b/views/css/index.style.css
@@ -173,6 +173,8 @@ class à injecter via le javascript
   text-align: center;
   border-radius: 0px 0px 5px 5px;
   margin: 0px auto 10px auto;
+  -webkit-box-shadow: 3px 3px 2px #4e351d;
+          box-shadow: 3px 3px 2px #4e351d;
 }
 
 .card-img {
@@ -190,22 +192,38 @@ class à injecter via le javascript
 }
 
 .card-infos {
-  background-color: indigo;
-  width: 80%;
-  height: 35px;
+  background-color: #8e52b9;
+  border-radius: 5px;
+  width: 85%;
+  height: 45px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 2px 2px 5px #381d41;
+          box-shadow: 2px 2px 5px #381d41;
 }
 
 .info-name {
   color: whitesmoke;
   text-decoration: none;
-  height: 50%;
+  height: 60%;
+  text-transform: uppercase;
+  font-size: 13px;
 }
 
 .info-price {
   color: whitesmoke;
   text-decoration: none;
-  height: 50%;
+  height: 40%;
+  font-size: 13px;
 }
 
 /***************
