--- a/views/css/index.style.scss
+++ b/views/css/index.style.scss
@@ -113,6 +113,7 @@ class à injecter via le javascript
     text-align: center;
     border-radius: 0px 0px 5px 5px;
     margin: 0px auto 10px auto;
+    box-shadow: 3px 3px 2px rgba($color: #4e351d, $alpha: 1.0);
 }
 
 
@@ -126,24 +127,33 @@ class à injecter via le javascript
 }
 
 .card-infos{
-    background-color: indigo;
-    width: 80%;
-    height: 35px;
+    //background-color: indigo;
+    background-color: rgb(142, 82, 185);
+    border-radius: 5px;
+    width: 85%;
+    height: 45px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 2px 2px 5px rgba($color: #381d41, $alpha: 1.0);
 }
 
 .info-name{
     //background-color: crimson;
     color: whitesmoke;
     text-decoration: none;
-    height: 50%;
+    height: 60%;
+    text-transform: uppercase;
+    font-size: 13px;
 }
 
 .info-price{
     //background-color: rgb(20, 220, 53);
     color: whitesmoke;
     text-decoration: none;
-    height: 50%;
+    height:40%;
+    font-size: 13px;
 }
 
 
