--- a/views/css/produit.style.css
+++ b/views/css/produit.style.css
@@ -90,7 +90,8 @@ body {
 }
 
 #card-teddy {
-  width: 100%;
+  background-color: #33221c;
+  width: 90%;
   height: 100%;
   padding: 5px;
   display: -webkit-box;
@@ -107,6 +108,7 @@ body {
 .card {
   width: 100%;
   height: 100%;
+  padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,7 +123,8 @@ body {
 
 .card-img {
   width: 95%;
-  height: 50%;
+  height: 70%;
+  padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -131,13 +134,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 img {
-  border-radius: 50px;
+  border-radius: 25px;
   border: 3px solid #532d1b;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .card-infos {
@@ -159,7 +163,7 @@ img {
 }
 
 .info-name {
-  background-color: indigo;
+  background-color: #8e52b9;
   width: 50%;
   height: 55px;
   display: -webkit-box;
@@ -172,10 +176,14 @@ img {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 5px;
+  font-size: 20px;
+  text-transform: uppercase;
+  -webkit-box-shadow: 2px 2px 5px #080708;
+          box-shadow: 2px 2px 5px #080708;
 }
 
 .info-price {
-  background-color: indigo;
+  background-color: #8e52b9;
   width: 50%;
   height: 55px;
   display: -webkit-box;
@@ -188,10 +196,13 @@ img {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 5px;
+  font-size: 20px;
+  -webkit-box-shadow: 2px 2px 5px #080708;
+          box-shadow: 2px 2px 5px #080708;
 }
 
 .customization {
-  background-color: indigo;
+  background-color: #8e52b9;
   width: 50%;
   height: 55px;
   display: -webkit-box;
@@ -204,5 +215,9 @@ img {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 5px;
+  font-size: 15px;
+  text-transform: uppercase;
+  -webkit-box-shadow: 2px 2px 5px #080708;
+          box-shadow: 2px 2px 5px #080708;
 }
 /*# sourceMappingURL=produit.style.css.map */
