--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -69,7 +69,6 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
-      //object-fit: contain;
   }
 
   
@@ -78,8 +77,6 @@ body {
       border: 3px solid rgb(83, 45, 27);
       height: 100%;
       object-fit:fill;
-
-
   }
 
   
@@ -92,6 +89,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
   }
+
 
   .info-name{
     background-color: rgb(142, 82, 185);
@@ -118,14 +116,12 @@ body {
     border-radius: 5px;
     font-size: 20px;
     box-shadow: 2px 2px 5px rgba($color: #080708, $alpha: 1.0)
-
   }
 
 
-  .customization{
+  .dropdown-custom{
     //background-color: indigo;
     background-color: rgb(142, 82, 185);
-
     width: 50%;
     height: 55px;
     display: flex;
@@ -134,6 +130,68 @@ body {
     border-radius: 5px;
     font-size: 15px;
     text-transform: uppercase;
-    box-shadow: 2px 2px 5px rgba($color: #080708, $alpha: 1.0)
+    box-shadow: 2px 2px 5px rgba($color: #080708, $alpha: 1.0);
+    cursor: pointer;
+    position: relative;
+    overflow: visible;
+    margin-bottom: 30px;
   }
+
+.cust-ul{
+    background-color: seagreen;
+    width: 90%;
+    height: 0px;
+    display: flex;
+    opacity: 0;
+    flex-direction: column;
+    position: absolute;
+    top: 40px;
+    transition: height 1.5s ease-out;
+}
+
+
+
+  .dropdown-custom:hover .cust-ul{
+      opacity: 1;
+      height: 60px;
+  }
+
+
+  .link-a{
+    //background-color: red;
+    width: 100%;
+    height:25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .link-b{
+    //background-color: rgb(0, 247, 255);
+    width: 100%;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+
+  .opt1{
+      //background-color: grey;
+      width: 90%;
+      position: absolute;
+      text-align: center;
+  }
+
+
+  .opt2{
+    //background-color: rgb(87, 6, 6);
+    width: 90%;
+    position: absolute;
+    text-align: center;
+}
+
+
 
