--- a/views/css/produit.style.css
+++ b/views/css/produit.style.css
@@ -287,4 +287,22 @@ img {
   position: absolute;
   text-align: center;
 }
+
+.ajout {
+  background-color: pink;
+  width: 100%;
+  height: 50px;
+  margin-top: 35px;
+  font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
 /*# sourceMappingURL=produit.style.css.map */
