--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -195,3 +195,16 @@ body {
 
 
 
+.ajout{
+    background-color: pink;
+    width: 100%;
+    height: 50px;
+    margin-top: 35px;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+
