--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -31,6 +31,13 @@ body{
 .box{
     background-color: palegreen;
     width: 100%;
-    height: 80%;
+    height: 50%;
     padding: 5px;
+}
+
+form{
+    background-color: rgb(112, 95, 160);
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
 }
