--- a/views/panier.html
+++ b/views/panier.html
@@ -24,6 +24,24 @@
             <div class="box" id="box-cart">
 
             </div>
+            <form action="POST">
+                <label for="firstName">
+                    <input type="text" id ="firstName" name="firstName" placeholder="Votre prénom">
+                </label>
+                <label for="lastName">
+                    <input type="text" id ="lastName" name="lastName" placeholder="Votre nom ">
+                </label>
+                <label for="adress">
+                    <input type="text" id ="adress" name="adress" placeholder="Votre adresse">
+                </label>
+                <label for="city">
+                    <input type="text" id ="city" name="city" placeholder="Votre ville">
+                </label>
+                <label for="email">
+                    <input type="email" id ="email" name="email" placeholder="Votre email">
+                </label>
+            </form>
+
             <a type="btn" href="confirmation.html" class="button">
                 <h2>Commander</h2>
             </a>
