--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -94,7 +94,19 @@ body {
 .box {
   background-color: palegreen;
   width: 100%;
-  height: 80%;
+  height: 50%;
   padding: 5px;
+}
+
+form {
+  background-color: #705fa0;
+  padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=panier.style.css.map */
