formatting the price and local storage v1

--- a/views/produit.html
+++ b/views/produit.html
@@ -26,6 +26,6 @@
             <div id="card-teddy">
             </div>
     </div>
-    <script src="produit.js"></script>
+    <script src="produit.js" defer></script>
 </body>
 </html>
