--- a/views/panier.html
+++ b/views/panier.html
@@ -42,11 +42,11 @@
                 </label>
             </form>
 
-            <a type="btn" href="confirmation.html" class="button">
+            <a type="btn" href="confirmation.html" class="button" id="button">
                 <h2>Commander</h2>
             </a>
     </div>
     
-    <script src="panier.js"></script>
+    <script src="panier.js" defer></script>
 </body>
 </html>
