--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -35,6 +35,14 @@ body{
     padding: 5px;
 }
 
+
+.cart-item{
+    background-color: pink;
+    width: 90%;
+    height: 90%;
+}
+
+
 form{
     background-color: rgb(112, 95, 160);
     padding: 5px;
