add local storage on product page with cart button

--- a/views/panier.html
+++ b/views/panier.html
@@ -23,6 +23,10 @@
         <h1>Panier</h1>
             <div class="box" id="box-cart">
 
+                    <div class="cart__items"></div>
+                    <div class="cart__items-count"></div>
+                    <div class="cart__total"></div>
+                    
             </div>
             <form action="POST">
                 <label for="firstName">
