--- a/views/produit.html
+++ b/views/produit.html
@@ -17,14 +17,16 @@
             Orinoco
         </h1>
         <ul>
-            <li> <a href="#">acceuil</a> </li>
+            <li> <a href="index.html">acceuil</a> </li>
             <li> <a href="#">contact</a> </li>
         </ul>
     </header>
-    <div class="container">
-        <h1>Produits</h1>
+    <div class="container" id="container">
+        <!--
+            <h1>Produits</h1>
             <div id="card-teddy">
             </div>
+        -->
     </div>
     <script src="produit.js" defer></script>
 </body>
