--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -50,7 +50,8 @@ body {
 
 
   .cart-button{
-    background-color: red;
+    background-color: rgb(98, 0, 255);
+    border: 1px solid black;
     width: 500px;
     height: 25px;
   }
