--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
             <H2>Articles disponibles</H2>
         </section>
 
-        <section class="big-box">
+        <section class="big-box" id="container">
             <div class="right-box"> 
                 <div id="shop" class="big-card" >
                     <div id="teddy" class="box-card" >
