--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -92,7 +92,7 @@ body {
 }
 
 .box {
-  background-color: palegreen;
+  background-color: #41144d;
   width: 100%;
   height: 50%;
   padding: 5px;
@@ -114,5 +114,21 @@ form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+/*************/
+.empty-cart {
+  background-color: brown;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=panier.style.css.map */
