--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -29,7 +29,7 @@ body{
 
 
 .box{
-    background-color: palegreen;
+    background-color: rgb(65, 20, 77);
     width: 100%;
     height: 50%;
     padding: 5px;
@@ -48,4 +48,17 @@ form{
     padding: 5px;
     display: flex;
     flex-direction: column;
+}
+
+
+
+/*************/
+
+.empty-cart{
+    background-color: brown;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
