--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -131,4 +131,19 @@ form {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.test {
+  background-color: #2aa553;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=panier.style.css.map */
