--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -62,3 +62,12 @@ form{
     justify-content: center;
     align-items: center;
 }
+
+.test{
+    background-color: rgb(42, 165, 83);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
