--- a/views/panier.html
+++ b/views/panier.html
@@ -15,17 +15,19 @@
             Orinoco
         </h1>
         <ul>
-            <li> <a href="#">acceuil</a> </li>
+            <li> <a href="index.html">acceuil</a> </li>
             <li> <a href="#">contact</a> </li>
         </ul>
     </header>
     <div class="container">
         <h1>Panier</h1>
             <div class="box" id="box-cart">
-
+                <!--
+                    
                     <div class="cart__items"></div>
                     <div class="cart__items-count"></div>
                     <div class="cart__total"></div>
+                -->
                     
             </div>
             <form action="POST">
