--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -116,6 +116,23 @@ form {
           flex-direction: column;
 }
 
+.box {
+  background-color: cornflowerblue;
+  width: 100%;
+  height: 65%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  overflow: hidden;
+}
+
 /*************/
 .empty-cart {
   background-color: brown;
@@ -132,9 +149,25 @@ form {
           align-items: center;
 }
 
-.test {
-  background-color: #2aa553;
+.cart-content {
+  background-color: darkblue;
   width: 100%;
+  height: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.title {
+  background-color: #2aa553;
+  width: 30%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -145,5 +178,96 @@ form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
+}
+
+.titleB {
+  background-color: #2aa553;
+  width: 30%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.titleC {
+  background-color: #2aa553;
+  width: 30%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.item-content {
+  background-color: darkmagenta;
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 5px;
+}
+
+.item-list {
+  background-color: darkorange;
+  width: 30%;
+  height: 25px;
+  text-align: center;
+}
+
+.option-list {
+  background-color: darkorange;
+  width: 30%;
+  height: 25px;
+  text-align: center;
+}
+
+.prix-list {
+  background-color: darkorange;
+  width: 30%;
+  height: 25px;
+  text-align: center;
+}
+
+.total-content {
+  background-color: #ff1c14;
+  width: 100%;
+  height: 25px;
+  margin-top: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.total-price {
+  background-color: dimgrey;
+  width: 30%;
+  height: 100%;
+  margin-right: 10px;
 }
 /*# sourceMappingURL=panier.style.css.map */
