--- a/views/css/produit.style.scss
+++ b/views/css/produit.style.scss
@@ -50,10 +50,13 @@ body {
 
 
   .cart-button{
-    background-color: rgb(98, 0, 255);
+    background-color: rgb(211, 195, 238);
     border: 1px solid black;
-    width: 500px;
-    height: 25px;
+    width: 55px;
+    height: 35px;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
   }
   
   .card{
@@ -74,6 +77,7 @@ body {
                 -5px -5px 5px black;
 
   }
+
 
   .title{
     background-color: rgb(247, 237, 222);
