add confirmation form on cart page v1

--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -7,10 +7,17 @@
     <title>Confirmation</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1>Confirmation</h1>
-        <p>Nous vous remercions pour votre commande pour le(s) produit(s) <br> réf: ... pour un montant total de:... </p>
+        <div class="box" id="box">
+            <!--
+                <p>Nous vous remercions pour votre commande pour le(s) produit(s) <br> réf: ... pour un montant total de:... </p>
+            -->
+        </div>
+        
     </div>
     
 </body>
+
+<script src="confirmation.js"></script>
 </html>
