--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -91,19 +91,21 @@ body {
           align-items: center;
 }
 
-.box {
-  background-color: #41144d;
-  width: 100%;
-  height: 50%;
-  padding: 5px;
+/*
+.box{
+    background-color: rgb(65, 20, 77);
+    width: 100%;
+    height: 50%;
+    padding: 5px;
 }
 
-.cart-item {
-  background-color: pink;
-  width: 90%;
-  height: 90%;
-}
 
+.cart-item{
+    background-color: pink;
+    width: 90%;
+    height: 90%;
+}
+*/
 form {
   background-color: #705fa0;
   padding: 5px;
@@ -120,6 +122,7 @@ form {
   background-color: cornflowerblue;
   width: 100%;
   height: 65%;
+  padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -130,7 +133,6 @@ form {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  overflow: hidden;
 }
 
 /*************/
@@ -152,7 +154,7 @@ form {
 .cart-content {
   background-color: darkblue;
   width: 100%;
-  height: 25%;
+  height: 15%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -179,6 +181,7 @@ form {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  font-size: 9px;
 }
 
 .titleB {
@@ -195,6 +198,7 @@ form {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  font-size: 9px;
 }
 
 .titleC {
@@ -211,12 +215,13 @@ form {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  font-size: 9px;
 }
 
 .item-content {
   background-color: darkmagenta;
   width: 100%;
-  height: auto;
+  height: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -227,7 +232,6 @@ form {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  margin-top: 5px;
 }
 
 .item-list {
