--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -27,7 +27,7 @@ body{
     align-items: center;
 }
 
-
+/*
 .box{
     background-color: rgb(65, 20, 77);
     width: 100%;
@@ -41,7 +41,7 @@ body{
     width: 90%;
     height: 90%;
 }
-
+*/
 
 form{
     background-color: rgb(112, 95, 160);
@@ -55,10 +55,10 @@ form{
     background-color: cornflowerblue;
     width: 100%;
     height: 65%;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    overflow: hidden;
 
 }
 
@@ -78,7 +78,7 @@ form{
 .cart-content{
     background-color: darkblue;
     width: 100%;
-    height: 25%;
+    height: 15%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -93,6 +93,7 @@ form{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 9px;
 }
 
 .titleB{
@@ -103,6 +104,7 @@ form{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 9px;
 }
 
 
@@ -115,17 +117,18 @@ form{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 9px;
 }
 
 
 .item-content{
     background-color: darkmagenta;
     width: 100%;
-    height: auto;
+    height: 25px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 5px;
+    //margin-bottom: 2px;
 }
 
 
