add confirmation part v1

--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="./css/confirmation.style.css">
+
     <title>Confirmation</title>
 </head>
 <body>
     <div class="container" id="container">
-        <h1>Confirmation</h1>
-        <div class="box" id="box">
+        <header>
+            <h1>
+                Orinoco
+            </h1>
+            <ul>
+                <li> <a href="#">acceuil</a> </li>
+                <li> <a href="#">contact</a> </li>
+            </ul>
+        </header>
+        <h2>Confirmation</h2>
+        <div class="content" id="content">
             <!--
                 <p>Nous vous remercions pour votre commande pour le(s) produit(s) <br> réf: ... pour un montant total de:... </p>
             -->
