--- a/views/panier.html
+++ b/views/panier.html
@@ -22,36 +22,27 @@
     <div class="container">
         <h1>Panier</h1>
             <div class="box" id="box-cart">
-                <!--
-                    <div class="cart__items"></div>
-                    <div class="cart__items-count"></div>
-                    <div class="cart__total"></div>
-                -->
+                
             </div>
             
-            <form action="POST">
+            <form > 
                 <label for="firstName">
-                    <input type="text" id ="firstName" name="firstName" placeholder="Votre prénom" required>
+                    <input type="text" id ="firstName" name="firstName" placeholder="Votre prénom" required value="Steven">
                 </label>
                 <label for="lastName">
-                    <input type="text" id ="lastName" name="lastName" placeholder="Votre nom "required>
+                    <input type="text" id ="lastName" name="lastName" placeholder="Votre nom "required value="Universe">
                 </label>
                 <label for="adress">
-                    <input type="text" id ="adress" name="adress" placeholder="Votre adresse"required>
+                    <input type="text" id ="adress" name="adress" placeholder="Votre adresse"required value="Earth">
                 </label>
                 <label for="city">
-                    <input type="text" id ="city" name="city" placeholder="Votre ville"required>
+                    <input type="text" id ="city" name="city" placeholder="Votre ville"required value="36 Baker Street">
                 </label>
                 <label for="email">
-                    <input type="email" id ="email" name="email" placeholder="Votre email"required>
+                    <input type="email" id ="email" name="email" placeholder="Votre email"required value="stevenuniverse@bakerstreet.at">
                 </label>
 
                 <input type="submit" class="button" id="button" value= commander>
-                <!--
-                   <a type="submit" href="confirmation.html" >
-                    <h2>Commander</h2>
-                </a> 
-                -->
                 
             </form>
     </div>
