--- a/views/css/confirmation.style.scss
+++ b/views/css/confirmation.style.scss
@@ -2,13 +2,40 @@
 
 
 .container{
-    background-color: dimgrey;
+    h2{
+        //background-color: red;
+        margin-top: 90px;
+        margin-bottom: 10px;
+    }
+    //background-color: dimgrey;
+    background-image: url("../images/images (5).jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position-y: 55px;
     width: 100vw;
     height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
 }
 
-.box{
-    background-color: rgb(243, 67, 97);
+
+.content{
+    background-color: rgb(120, 65, 128);
+    border: 2px solid black;
+    border-radius: 4px;
     width: 100%;
-    height: 25px;
+    height: 32%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.fulfill{
+    //background-color: brown;
+    font-size: 21px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
