--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -57,7 +57,6 @@ header ul li a {
 }
 
 body {
-  background-color: #f56e14;
   width: 100vw;
   height: 100vh;
   display: -webkit-box;
@@ -91,23 +90,8 @@ body {
           align-items: center;
 }
 
-/*
-.box{
-    background-color: rgb(65, 20, 77);
-    width: 100%;
-    height: 50%;
-    padding: 5px;
-}
-
-
-.cart-item{
-    background-color: pink;
-    width: 90%;
-    height: 90%;
-}
-*/
 form {
-  background-color: #705fa0;
+  background-color: #4e395a;
   padding: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -119,7 +103,9 @@ form {
 }
 
 .box {
-  background-color: cornflowerblue;
+  background-color: #4e395a;
+  border: 2px solid black;
+  border-radius: 4px;
   width: 100%;
   height: 65%;
   padding: 5px;
@@ -130,14 +116,14 @@ form {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 /*************/
 .empty-cart {
-  background-color: brown;
+  background-color: whitesmoke;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -152,7 +138,7 @@ form {
 }
 
 .cart-content {
-  background-color: darkblue;
+  background-color: whitesmoke;
   width: 100%;
   height: 15%;
   display: -webkit-box;
@@ -168,7 +154,7 @@ form {
 }
 
 .title {
-  background-color: #2aa553;
+  background-color: whitesmoke;
   width: 30%;
   height: 100%;
   display: -webkit-box;
@@ -185,7 +171,7 @@ form {
 }
 
 .titleB {
-  background-color: #2aa553;
+  background-color: whitesmoke;
   width: 30%;
   height: 100%;
   display: -webkit-box;
@@ -202,7 +188,7 @@ form {
 }
 
 .titleC {
-  background-color: #2aa553;
+  background-color: whitesmoke;
   width: 30%;
   height: 100%;
   display: -webkit-box;
@@ -219,7 +205,7 @@ form {
 }
 
 .item-content {
-  background-color: darkmagenta;
+  background-color: whitesmoke;
   width: 100%;
   height: 25px;
   display: -webkit-box;
@@ -235,28 +221,28 @@ form {
 }
 
 .item-list {
-  background-color: darkorange;
+  background-color: whitesmoke;
   width: 30%;
   height: 25px;
   text-align: center;
 }
 
 .option-list {
-  background-color: darkorange;
+  background-color: whitesmoke;
   width: 30%;
   height: 25px;
   text-align: center;
 }
 
 .prix-list {
-  background-color: darkorange;
+  background-color: whitesmoke;
   width: 30%;
   height: 25px;
   text-align: center;
 }
 
 .total-content {
-  background-color: #ff1c14;
+  background-color: whitesmoke;
   width: 100%;
   height: 25px;
   margin-top: 15px;
@@ -269,9 +255,14 @@ form {
 }
 
 .total-price {
-  background-color: dimgrey;
   width: 30%;
   height: 100%;
   margin-right: 10px;
+  text-align: center;
+}
+
+.button {
+  font-weight: bold;
+  font-size: 17px;
 }
 /*# sourceMappingURL=panier.style.css.map */
