--- a/views/css/panier.style.scss
+++ b/views/css/panier.style.scss
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-color:#f56e14 ;
+    //background-color:#f56e14 ;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -27,24 +27,8 @@ body{
     align-items: center;
 }
 
-/*
-.box{
-    background-color: rgb(65, 20, 77);
-    width: 100%;
-    height: 50%;
-    padding: 5px;
-}
-
-
-.cart-item{
-    background-color: pink;
-    width: 90%;
-    height: 90%;
-}
-*/
-
 form{
-    background-color: rgb(112, 95, 160);
+    background-color: rgb(78, 57, 90);
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -52,13 +36,15 @@ form{
 
 
 .box{
-    background-color: cornflowerblue;
+    background-color: rgb(78, 57, 90);
+    border: 2px solid black;
+    border-radius: 4px;
     width: 100%;
     height: 65%;
     padding: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
 
 }
 
@@ -66,7 +52,8 @@ form{
 /*************/
 
 .empty-cart{
-    background-color: brown;
+    //background-color: brown;
+    background-color: whitesmoke;
     width: 100%;
     height: 100%;
     display: flex;
@@ -76,7 +63,8 @@ form{
 
 
 .cart-content{
-    background-color: darkblue;
+    //background-color: darkblue;
+    background-color: whitesmoke;
     width: 100%;
     height: 15%;
     display: flex;
@@ -86,7 +74,8 @@ form{
 
 
 .title{
-    background-color: rgb(42, 165, 83);
+    //background-color: rgb(42, 165, 83);
+    background-color: whitesmoke;
     width: 30%;
     height: 100%;
     display: flex;
@@ -97,7 +86,8 @@ form{
 }
 
 .titleB{
-    background-color: rgb(42, 165, 83);
+    //background-color: rgb(42, 165, 83);
+    background-color: whitesmoke;
     width: 30%;
     height: 100%;
     display: flex;
@@ -110,7 +100,8 @@ form{
 
 
 .titleC{
-    background-color: rgb(42, 165, 83);
+    //background-color: rgb(42, 165, 83);
+    background-color: whitesmoke;
     width: 30%;
     height: 100%;
     display: flex;
@@ -122,7 +113,8 @@ form{
 
 
 .item-content{
-    background-color: darkmagenta;
+    //background-color: darkmagenta;
+    background-color: whitesmoke;
     width: 100%;
     height: 25px;
     display: flex;
@@ -133,7 +125,8 @@ form{
 
 
 .item-list{
-    background-color: darkorange;
+    //background-color: darkorange;
+    background-color: whitesmoke;
     width: 30%;
     height: 25px;
     text-align: center;
@@ -142,7 +135,8 @@ form{
 
 
 .option-list{
-    background-color: darkorange;
+    //background-color: darkorange;
+    background-color: whitesmoke;
     width: 30%;
     height: 25px;
     text-align: center;
@@ -151,7 +145,8 @@ form{
 
 
 .prix-list{
-    background-color: darkorange;
+    //background-color: darkorange;
+    background-color: whitesmoke;
     width: 30%;
     height: 25px;
     text-align: center;
@@ -159,7 +154,8 @@ form{
 
 
 .total-content{
-    background-color: rgb(255, 28, 20);
+    //background-color: rgb(255, 28, 20);
+    background-color: whitesmoke;
     width: 100%;
     height: 25px;
     margin-top: 15px;
@@ -169,8 +165,14 @@ form{
 
 
 .total-price{
-    background-color: dimgrey;
+    //background-color: dimgrey;
     width: 30%;
     height: 100%;
     margin-right: 10px;
+    text-align: center;
+}
+
+.button{
+    font-weight: bold;
+    font-size: 17px;
 }
