block and add error messages at submission

--- a/views/css/confirmation.style.scss
+++ b/views/css/confirmation.style.scss
@@ -36,6 +36,7 @@
 .fulfill{
     //background-color: brown;
     font-size: 21px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
