--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--debut container principal-->
     <div class="container">
         <header>
             <h1>
@@ -28,6 +29,7 @@
         </section>
 
         <section class="big-box" id="container">
+        <!--debut section contenant les articles-->
             <div class="right-box"> 
                 <div id="shop" class="big-card" >
                     <div id="teddy" class="box-card" >
@@ -35,8 +37,10 @@
                 </div>
             </div>
         </section>
+        <!--fin section contenant les articles-->
 
         <script src="index.js"></script>
     </div>
+    <!--fin du container principal-->
 </body>
 </html>
