--- a/views/panier.html
+++ b/views/panier.html
@@ -32,8 +32,8 @@
                 <label for="lastName">
                     <input type="text" id ="lastName" name="lastName" placeholder="Votre nom "required value="Universe">
                 </label>
-                <label for="adress">
-                    <input type="text" id ="adress" name="adress" placeholder="Votre adresse"required value="Earth">
+                <label for="address">
+                    <input type="text" id ="address" name="address" placeholder="Votre adresse"required value="Earth">
                 </label>
                 <label for="city">
                     <input type="text" id ="city" name="city" placeholder="Votre ville"required value="36 Baker Street">
@@ -42,8 +42,7 @@
                     <input type="email" id ="email" name="email" placeholder="Votre email"required value="stevenuniverse@bakerstreet.at">
                 </label>
 
-                <input type="submit" class="button" id="button" value= commander>
-                
+                <input type="submit" class="button" id="button" value= "commander">
             </form>
     </div>
     
