--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -16,7 +16,7 @@
                 Orinoco
             </h1>
             <ul>
-                <li> <a href="#">acceuil</a> </li>
+                <li> <a href="index.html">acceuil</a> </li>
                 <li> <a href="#">contact</a> </li>
             </ul>
         </header>
