--- a/views/css/confirmation.style.css
+++ b/views/css/confirmation.style.css
@@ -89,7 +89,8 @@ header ul li a {
 
 .fulfill {
   font-size: 21px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=confirmation.style.css.map */
