--- a/views/panier.html
+++ b/views/panier.html
@@ -21,6 +21,7 @@
     </header>
     <div class="container">
         <h1>Panier</h1>
+            <a href="index.html">retour</a>
             <div class="box" id="box-cart">
                 
             </div>
