--- a/views/css/produit.style.css
+++ b/views/css/produit.style.css
@@ -99,6 +99,21 @@ body {
           box-shadow: 5px 5px 5px #2b032b, -5px -5px 5px #2b032b;
 }
 
+.back-button {
+  background-color: #d3c3ee;
+  border: 1px solid black;
+  width: 55px;
+  height: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .cart-button {
   background-color: #d3c3ee;
   border: 1px solid black;
