add remove button to page 'panier' v1

--- a/views/css/panier.style.css
+++ b/views/css/panier.style.css
@@ -241,6 +241,21 @@ form {
   text-align: center;
 }
 
+.remove-button {
+  background-color: #d3c3ee;
+  border: 1px solid black;
+  width: 55px;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .total-content {
   background-color: whitesmoke;
   width: 100%;
